--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                 </span>
                 <a href="https://the-wheel-of-faith.fandom.com/">Wiki</a>
             </div>
+            <div class="location discord">
+                <span class="material-symbols-outlined">
+                    <img src="./assets/svg/discord.svg" style="height: 24px;">
+                </span>
+                <a href="https://discord.gg/3usbJ8Wwnn">Discord</a>
+            </div>
         </div>
         <div class="location-hover seasons hidden">
             <div class="header">
