--- a/index.html
+++ b/index.html
@@ -35,63 +35,7 @@
             return check;
         };
     </script>
-    <div id="navigation">
-        <div class="nav">
-            <a id="logo" href="#">
-                <img src="./assets/images/WoF Logo.png"/>
-            </a>
-            <div class="mobile-menu-holder">
-                <span class="material-symbols-outlined button mobile-menu-popout-button">menu</span>
-                <span class="text"></span>
-            </div>
-            <div class="location home">
-                <span class="material-symbols-outlined">home</span>
-                <a href="#">Home</a>
-            </div>
-            <div class="location seasons" onclick="showLocationHover()">
-                <span class="material-symbols-outlined">chevron_right</span>
-                <a>Seasons</a>
-            </div>
-            <div class="location website">
-                <span class="material-symbols-outlined">desktop_windows</span>
-                <a href="#">Website</a>
-            </div>
-            <div class="location fandom">
-                <span class="material-symbols-outlined">
-                    <img src="./assets/svg/fandom.svg" style="height: 24px;"/>
-                </span>
-                <a href="https://the-wheel-of-faith.fandom.com/">Wiki</a>
-            </div>
-            <div class="location discord">
-                <span class="material-symbols-outlined">
-                    <img src="./assets/svg/discord.svg" style="height: 24px;">
-                </span>
-                <a href="https://discord.gg/3usbJ8Wwnn">Discord</a>
-            </div>
-        </div>
-        <div class="location-hover seasons hidden">
-            <div class="header">
-                <h2>Choose a season</h2>
-            </div>
-            <ol class="menu">
-                <a class="menu-item" onclick="showAllSeasons()">All Seasons</a>
-                <a class="menu-item" onclick="clearCharacters(); showSeasonCharacters(1)">Season 1</a>
-                <a class="menu-item" onclick="clearCharacters(); showSeasonCharacters(2)">Season 2</a>
-                <a class="menu-item" onclick="clearCharacters(); showSeasonCharacters(3)">Season 3</a>
-                <a class="menu-item" onclick="clearCharacters(); showSeasonCharacters(4)">Season 4</a>
-                <a class="menu-item" onclick="clearCharacters(); showSeasonCharacters(5)">Season 5</a>
-                <a class="menu-item" onclick="clearCharacters(); showSeasonCharacters(6)">Season 6</a>
-            </ol>
-        </div>
-        <div class="location-backdrop hidden"></div>
-    </div>
-    <div id="container">
-        <div class="search-container">
-            <label for="searchbar">Search for a character</label>
-            <input name="searchbar" id="searchbar" placeholder='Try "bushin"'/>
-        </div>
-        <div id="characters"></div>
-    </div>
+    <h1>This site is being reworked</h1>
     <script src="./js/scripts.js"></script>
     <script src="./js/process_character_data.js"></script>
     <script>
