--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             return check;
         };
     </script>
-    <h1>This site is being reworked</h1>
+    <h1>This site is temporarily closed!</h1>
+    <p>If you would like progress updates, please join the <a href="https://discord.gg/3usbJ8Wwnn">discord server</a></p>
     <script src="./js/scripts.js"></script>
     <script src="./js/process_character_data.js"></script>
     <script>
