--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <link rel="stylesheet" href="./stylesheets/styles.css">
 </head>
 <body>
-    <h1>Announcing my absence</h1>
+    <h1 style="font-weight: bold; font-size: 24px;">Announcing my absence</h1>
     <p style="font-family: system-ui;">
         I will be temporarily/permanently ceasing any and all development for the Wheel of Faith Archive Project. <br>
         The Wheel of Faith will always have a place in my heart. It's been a place I could confide in and make many friends. <br>
         Sadly, that has come to an end, and I no longer feel welcome inside of the server. Certain events have made me feel such way. <br>
         If you came here for the characters, please refer to <a href="https://the-wheel-of-faith.fandom.com/wiki/The_Wheel_of_Faith_Wiki">The Wiki</a>.
         <br> <br>
-        <a href="https://discord.gg/3usbJ8Wwnn" style="font-size: 11px;">social link</a>
+        <a href="https://discord.gg/3usbJ8Wwnn" style="font-size: 4px;">social link</a>
     </p>
 </body>
 </html>
