--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
             background-color: var(--page-background-color);
             color: var(--page-text-color);
         }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
     <link rel="stylesheet" href="./stylesheets/styles.css">
 </head>
 <body>
-    <h1 style="font-weight: bold; font-size: 24px;">Announcing my absence</h1>
+    <h1 style="font-weight: bold; font-size: 24px; font-family: system-ui;">Announcing my absence</h1>
     <p style="font-family: system-ui;">
         I will be temporarily/permanently ceasing any and all development for the Wheel of Faith Archive Project. <br>
         The Wheel of Faith will always have a place in my heart. It's been a place I could confide in and make many friends. <br>
