--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
         }
